--- a/lessons/2.md
+++ b/lessons/2.md
@@ -13,41 +13,43 @@ Crie um teste automatizado que exercita a funcionalidade de _login_ via interfac
 2. Então, mova o arquivo `login.cy.js` para o diretório recém criado e modifique seus dados para o seguinte:
 
 ```js
-describe('Login', () => {
-  it('successfully', () => {
-    cy.login()
+describe("Login", () => {
+  it("successfully", () => {
+    cy.gui_login();
 
-    cy.get('.qa-user-avatar').should('be.visible')
-  })
-})
-
+    cy.get(".qa-user-avatar").should("be.visible");
+  });
+});
 ```
 
 3. Dentro do diretório `cypress/support/`, renomeie o arquivo `commands.js` por `gui_commands.js` e altere seu conteúdo pelo seguinte:
 
 ```js
-Cypress.Commands.add('login', (
-  user = Cypress.env('user_name'),
-  password = Cypress.env('user_password'),
-) => {
-  const login = () => {
-    cy.visit('/users/sign_in')
+Cypress.Commands.add(
+  "login",
+  (
+    user = Cypress.env("user_name"),
+    password = Cypress.env("user_password"),
+  ) => {
+    const login = () => {
+      cy.visit("/users/sign_in");
 
-    cy.get("[data-qa-selector='login_field']").type(user)
-    cy.get("[data-qa-selector='password_field']").type(password, { log: false })
-    cy.get("[data-qa-selector='sign_in_button']").click()
-  }
+      cy.get("[data-qa-selector='login_field']").type(user);
+      cy.get("[data-qa-selector='password_field']").type(password, {
+        log: false,
+      });
+      cy.get("[data-qa-selector='sign_in_button']").click();
+    };
 
-  login()
-})
-
+    login();
+  },
+);
 ```
 
 4. Dentro do diretório `cypress/support/`, altere os dados do arquivo `e2e.js` pelo seguinte:
 
 ```js
-import './gui_commands'
-
+import "./gui_commands";
 ```
 
 5. Por fim, no terminal de linha de comando, na raiz do projeto, execute o comando `npx cypress run --spec cypress/e2e/gui/login.cy.js` para executar o novo teste em modo _headless_.
@@ -76,7 +78,7 @@ Copie o resultado da execução do teste e cole em sua _timeline_ no LinkedIn, c
 
 **Observação:** Lembre de me marcar em sua publicação. Segue [meu perfil no LinkedIn](https://www.linkedin.com/in/walmyr-lima-e-silva-filho). Aproveita pra se conectar comigo!
 
-___
+---
 
 O _login_ está coberto por testes e você acabou de criar o primeiro teste.
 
