--- a/lessons/3.md
+++ b/lessons/3.md
@@ -12,19 +12,18 @@ Crie um teste automatizado que exercita a funcionalidade de _logout_ via interfa
 1. Dentro do diretrório `cypress/e2e/gui/`, crie um arquivo chamado `logout.cy.js` com os seguintes dados:
 
 ```js
-describe('Logout', () => {
+describe("Logout", () => {
   beforeEach(() => {
-    cy.login()
-    cy.visit('/')
-  })
+    cy.gui_login();
+    cy.visit("/");
+  });
 
-  it('successfully', () => {
-    cy.logout()
+  it("successfully", () => {
+    cy.logout();
 
-    cy.url().should('be.equal', `${Cypress.config('baseUrl')}/users/sign_in`)
-  })
-})
-
+    cy.url().should("be.equal", `${Cypress.config("baseUrl")}/users/sign_in`);
+  });
+});
 ```
 
 2. Dentro do diretório `cypress/support/`, atualize o arquivo `gui_commands.js` com o commando `logout`, conforme abaixo:
@@ -59,7 +58,7 @@ Ao final da execução, você deve possuir um resultado como o seguinte:
 
 </details>
 
-___
+---
 
 O _logout_ está coberto por testes!
 
