--- a/lessons/5.md
+++ b/lessons/5.md
@@ -12,32 +12,31 @@ Crie um teste automatizado que exercita a funcionalidade de criação de _issue_
 1. Dentro do diretrório `cypress/e2e/gui/`, crie um arquivo chamado `createIssue.cy.js` com os seguintes dados:
 
 ```js
-import { faker } from '@faker-js/faker'
+import { faker } from "@faker-js/faker";
 
-describe('Create Issue', () => {
+describe("Create Issue", () => {
   const issue = {
     title: `issue-${faker.datatype.uuid()}`,
     description: faker.random.words(3),
     project: {
       name: `project-${faker.datatype.uuid()}`,
-      description: faker.random.words(5)
-    }
-  }
+      description: faker.random.words(5),
+    },
+  };
 
   beforeEach(() => {
-    cy.login()
-    cy.gui_createProject(issue.project)
-  })
+    cy.gui_login();
+    cy.gui_createProject(issue.project);
+  });
 
-  it('successfully', () => {
-    cy.gui_createIssue(issue)
+  it("successfully", () => {
+    cy.gui_createIssue(issue);
 
-    cy.get('.issue-details')
-      .should('contain', issue.title)
-      .and('contain', issue.description)
-  })
-})
-
+    cy.get(".issue-details")
+      .should("contain", issue.title)
+      .and("contain", issue.description);
+  });
+});
 ```
 
 2. Dentro do diretório `cypress/support/`, atualize o arquivo `gui_commands.js` com o commando `gui_createIssue`, conforme abaixo:
@@ -69,7 +68,7 @@ Cypress.Commands.add('gui_createIssue', issue => {
 
 </details>
 
-___
+---
 
 A criação de _issues_ também está coberta por testes!
 
