--- a/lessons/6.md
+++ b/lessons/6.md
@@ -22,52 +22,48 @@ Crie um teste automatizado que exercita a funcionalidade de criação de projeto
 2. Dentro do diretrório `cypress/e2e/api/`, crie um arquivo chamado `createProject.cy.js` com os seguintes dados:
 
 ```js
-import { faker } from '@faker-js/faker'
+import { faker } from "@faker-js/faker";
 
-describe('Create Project', () => {
-  it('successfully', () => {
+describe("Create Project", () => {
+  it("successfully", () => {
     const project = {
       name: `project-${faker.datatype.uuid()}`,
-      description: faker.random.words(5)
-    }
+      description: faker.random.words(5),
+    };
 
-    cy.api_createProject(project)
-      .then(response => {
-        expect(response.status).to.equal(201)
-        expect(response.body.name).to.equal(project.name)
-        expect(response.body.description).to.equal(project.description)
-      })
-  })
-})
-
+    cy.api_createProject(project).then((response) => {
+      expect(response.status).to.equal(201);
+      expect(response.body.name).to.equal(project.name);
+      expect(response.body.description).to.equal(project.description);
+    });
+  });
+});
 ```
 
 3. Dentro do diretório `cypress/support/`, crie um arquivo chamado `api_commands.js`, com os seguintes dados:
 
 ```js
-const accessToken = `Bearer ${Cypress.env('gitlab_access_token')}`
+const accessToken = `Bearer ${Cypress.env("gitlab_access_token")}`;
 
-Cypress.Commands.add('api_createProject', project => {
+Cypress.Commands.add("api_createProject", (project) => {
   cy.request({
-    method: 'POST',
+    method: "POST",
     url: `/api/v4/projects/`,
     body: {
       name: project.name,
       description: project.description,
-      initialize_with_readme: true
+      initialize_with_readme: true,
     },
     headers: { Authorization: accessToken },
-  })
-})
-
+  });
+});
 ```
 
 4. Dentro do diretório `cypress/support/`, adicione ao arquivo `e2e.js` o import do arquivo `api_commands.js`, conforme abaixo:
 
 ```js
-import './api_commands'
-import './gui_commands'
-
+import "./api_commands";
+import "./gui_commands";
 ```
 
 5. Por fim, via Cypress App, execute o teste `cypress/e2e/api/createProject.cy.js`.
@@ -127,7 +123,6 @@ Cypress.Commands.add('api_deleteProjects', () => {
 
 ```
 
-
 2. Agora, no arquivo `cypress/e2e/api/createProject.cy.js`, adicione a função `beforeEach`, chamando o comando customizado `cy.api_deleteProjects()` em sua função de _callback_, conforme abaixo:
 
 ```js
@@ -147,7 +142,7 @@ describe('Create project', () => {
 
 > Acesse o ambiente local e veja que só um projeto deve estar disponível após a execução do teste, visto que todos os outros foram limpos antes da execução.
 
-4. Nos arquivos `cypress/e2e/gui/createProject.cy.js` e `cypress/e2e/gui/createIssue.cy.js`, adicione também a chamada ao comando customizado `cy.api_deleteProjects()` antes da chamada do comando `cy.login()`, garantindo que testes de _GUI_ também não estão deixando "lixo" para trás
+4. Nos arquivos `cypress/e2e/gui/createProject.cy.js` e `cypress/e2e/gui/createIssue.cy.js`, adicione também a chamada ao comando customizado `cy.api_deleteProjects()` antes da chamada do comando `cy.gui_login()`, garantindo que testes de _GUI_ também não estão deixando "lixo" para trás
 
 5. Execute ambos os testes via Cypress App para garantir que ambos continuam funcionando.
 
@@ -186,21 +181,20 @@ Com ela, é possivel ter _feedback_ visual durante a execução de testes de API
 1. Altere o arquivo `cypress/support/e2e.js` conforme abaixo:
 
 ```js
-import 'cypress-plugin-api'
+import "cypress-plugin-api";
 
-import './api_commands'
-import './gui_commands'
-
+import "./api_commands";
+import "./gui_commands";
 ```
 
 2. Altere o arquivo `cypress.config.js` conforme abaixo:
 
 ```js
-const { defineConfig } = require('cypress')
+const { defineConfig } = require("cypress");
 
 module.exports = defineConfig({
   e2e: {
-    baseUrl: 'http://localhost',
+    baseUrl: "http://localhost",
     env: {
       hideCredentials: true,
       requestMode: true,
@@ -208,8 +202,7 @@ module.exports = defineConfig({
   },
   fixturesFolder: false,
   video: false,
-})
-
+});
 ```
 
 3. Via Cypress App, execute de novo o arquivo `cypress/e2e/api/createProject.cy.js`.
@@ -262,6 +255,6 @@ describe('Create Issue', options, () => {
 
 </details>
 
-___
+---
 
 Vá para a [aula 7](./7.md) para testarmos a funcionalidade de criação de _issue_, também via chamadas de API.
