--- a/lessons/8.md
+++ b/lessons/8.md
@@ -19,44 +19,49 @@ Crie um teste automatizado que exercita a funcionalidade de adição de uma etiq
 1. No diretório `cypress/e2e/gui/`, crie um arquivo chamado `setLabelOnIssue.cy.js` com o seguinte conteúdo:
 
 ```js
-import { faker } from '@faker-js/faker'
+import { faker } from "@faker-js/faker";
 
-const options = { env: { snapshotOnly: true } }
+const options = { env: { snapshotOnly: true } };
 
-describe('Set label on issue', options, () => {
+describe("Set label on issue", options, () => {
   const issue = {
     title: `issue-${faker.datatype.uuid()}`,
     description: faker.random.words(3),
     project: {
       name: `project-${faker.datatype.uuid()}`,
-      description: faker.random.words(5)
-    }
-  }
+      description: faker.random.words(5),
+    },
+  };
 
   const label = {
     name: `label-${faker.random.word()}`,
-    color: '#ffaabb'
-  }
+    color: "#ffaabb",
+  };
 
   beforeEach(() => {
-    cy.api_deleteProjects()
-    cy.login()
-    cy.api_createIssue(issue)
-      .then(response => {
-        cy.api_createLabel(response.body.project_id, label)
-        cy.visit(`${Cypress.env('user_name')}/${issue.project.name}/issues/${response.body.iid}`)
-      })
-  })
+    cy.api_deleteProjects();
+    cy.gui_login();
+    cy.api_createIssue(issue).then((response) => {
+      cy.api_createLabel(response.body.project_id, label);
+      cy.visit(
+        `${Cypress.env("user_name")}/${issue.project.name}/issues/${
+          response.body.iid
+        }`,
+      );
+    });
+  });
 
-  it('successfully', () => {
-    cy.gui_setLabelOnIssue(label)
+  it("successfully", () => {
+    cy.gui_setLabelOnIssue(label);
 
-    cy.get('.qa-labels-block').should('contain', label.name)
-    cy.get('.qa-labels-block span')
-      .should('have.attr', 'style', `background-color: ${label.color}; color: #333333;`)
-  })
-})
-
+    cy.get(".qa-labels-block").should("contain", label.name);
+    cy.get(".qa-labels-block span").should(
+      "have.attr",
+      "style",
+      `background-color: ${label.color}; color: #333333;`,
+    );
+  });
+});
 ```
 
 2. No diretório `cypress/support/`, atualize o arquivo `api_commands.js` conforme abaixo:
@@ -141,7 +146,7 @@ Ao final da execução, você deve possuir um resultado como o seguinte:
 
 </details>
 
-___
+---
 
 Mais uma funcionalidade coberta por testes de forma otimizada!
 
