--- a/lessons/4.md
+++ b/lessons/4.md
@@ -12,27 +12,31 @@ Crie um teste automatizado que exercita a funcionalidade de criação de projeto
 1. Dentro do diretrório `cypress/e2e/gui/`, crie um arquivo chamado `createProject.cy.js` com os seguintes dados:
 
 ```js
-import { faker } from '@faker-js/faker'
+import { faker } from "@faker-js/faker";
 
-describe('Create Project', () => {
+describe("Create Project", () => {
   beforeEach(() => {
-    cy.login()
-  })
+    cy.gui_login();
+  });
 
-  it('successfully', () => {
+  it("successfully", () => {
     const project = {
       name: `project-${faker.datatype.uuid()}`,
-      description: faker.random.words(5)
-    }
+      description: faker.random.words(5),
+    };
 
-    cy.gui_createProject(project)
+    cy.gui_createProject(project);
 
-    cy.url().should('be.equal', `${Cypress.config('baseUrl')}/${Cypress.env('user_name')}/${project.name}`)
-    cy.contains(project.name).should('be.visible')
-    cy.contains(project.description).should('be.visible')
-  })
-})
-
+    cy.url().should(
+      "be.equal",
+      `${Cypress.config("baseUrl")}/${Cypress.env("user_name")}/${
+        project.name
+      }`,
+    );
+    cy.contains(project.name).should("be.visible");
+    cy.contains(project.description).should("be.visible");
+  });
+});
 ```
 
 2. Dentro do diretório `cypress/support/`, atualize o arquivo `gui_commands.js` com o commando `gui_createProject`, conforme abaixo:
@@ -140,25 +144,24 @@ Cypress.Commands.add('gui_createProject', () => {
 
 ```
 
- > 👨‍🏫 Agora, o Cypress está configurado para criar (e restaurar) a sessão do usuário, salvando tempo para testes em que isso é só uma pré-condição, além de continuar possibilitando o _login_ via _GUI_, quando este ainda for o foco do mesmo, tal como no teste de _login_ propriamente dito.
+> 👨‍🏫 Agora, o Cypress está configurado para criar (e restaurar) a sessão do usuário, salvando tempo para testes em que isso é só uma pré-condição, além de continuar possibilitando o _login_ via _GUI_, quando este ainda for o foco do mesmo, tal como no teste de _login_ propriamente dito.
 >
 > Além disso, a nova versão do comando de _login_ está preparada para compartilhar a sessão entre _specs_ (arquivos de teste).
 
 2. No arquivo `cypress/e2e/gui/login.cy.js`, altere seu conteúdo para o seguinte:
 
 ```js
-describe('Login', () => {
-  it('successfully', () => {
-    const user = Cypress.env('user_name')
-    const password = Cypress.env('user_password')
-    const options = { cacheSession: false }
+describe("Login", () => {
+  it("successfully", () => {
+    const user = Cypress.env("user_name");
+    const password = Cypress.env("user_password");
+    const options = { cacheSession: false };
 
-    cy.login(user, password, options)
+    cy.login(user, password, options);
 
-    cy.get('.qa-user-avatar').should('be.visible')
-  })
-})
-
+    cy.get(".qa-user-avatar").should("be.visible");
+  });
+});
 ```
 
 3. Por fim, **feche a Cypress App**, abra-a de novo (`npx cypress open`) e execute o seguintes testes, nesta exata ordem: `createProject.cy.js`, `createProject.cy.js` (isso mesmo, 2x) e `logout.cy.js`.
@@ -252,7 +255,7 @@ Aqui vai um texto exemplo, caso não tenha uma idéia do que escrever.
 
 **Observação:** Lembre de me marcar em sua publicação.
 
-___
+---
 
 Perfeito!
 
