--- a/lessons/9.md
+++ b/lessons/9.md
@@ -19,41 +19,43 @@ Crie um teste automatizado que exercita a funcionalidade de adição de um marco
 1. No diretório `cypress/e2e/gui/`, crie um arquivo chamado `setMilestoneOnIssue.cy.js` com o seguinte conteúdo:
 
 ```js
-import { faker } from '@faker-js/faker'
+import { faker } from "@faker-js/faker";
 
-const options = { env: { snapshotOnly: true } }
+const options = { env: { snapshotOnly: true } };
 
-describe('Set milestone on issue', options, () => {
+describe("Set milestone on issue", options, () => {
   const issue = {
     title: `issue-${faker.datatype.uuid()}`,
     description: faker.random.words(3),
     project: {
       name: `project-${faker.datatype.uuid()}`,
-      description: faker.random.words(5)
-    }
-  }
+      description: faker.random.words(5),
+    },
+  };
 
   const milestone = {
-    title: `milestone-${faker.random.word()}`
-  }
+    title: `milestone-${faker.random.word()}`,
+  };
 
   beforeEach(() => {
-    cy.api_deleteProjects()
-    cy.login()
-    cy.api_createIssue(issue)
-      .then(response => {
-        cy.api_createMilestone(response.body.project_id, milestone)
-        cy.visit(`${Cypress.env('user_name')}/${issue.project.name}/issues/${response.body.iid}`)
-      })
-  })
+    cy.api_deleteProjects();
+    cy.gui_login();
+    cy.api_createIssue(issue).then((response) => {
+      cy.api_createMilestone(response.body.project_id, milestone);
+      cy.visit(
+        `${Cypress.env("user_name")}/${issue.project.name}/issues/${
+          response.body.iid
+        }`,
+      );
+    });
+  });
 
-  it('successfully', () => {
-    cy.gui_setMilestoneOnIssue(milestone)
+  it("successfully", () => {
+    cy.gui_setMilestoneOnIssue(milestone);
 
-    cy.get('.block.milestone').should('contain', milestone.title)
-  })
-})
-
+    cy.get(".block.milestone").should("contain", milestone.title);
+  });
+});
 ```
 
 2. No diretório `cypress/support/`, atualize o arquivo `api_commands.js` conforme abaixo:
@@ -142,7 +144,7 @@ Ao final da execução, você deve possuir um resultado como o seguinte:
 
 </details>
 
-___
+---
 
 Mais uma funcionalidade coberta por testes de forma otimizada!
 
